force-app/main/default/objects/ssot__IncidentRelatedItem__dlm/fields/ssot__IncidentItemImpactType__c.field-meta.xml
<CustomField>
    <fullName>ssot__IncidentItemImpactType__c</fullName>
    <label>Incident Item Impact Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IncidentItemImpactType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>