force-app/main/default/objects/ssot__IncidentRelatedItem__dlm/fields/ssot__IncidentRelatedItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__IncidentRelatedItemNumber__c</fullName>
    <label>Incident Related Item Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IncidentRelatedItemNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>