force-app/main/default/objects/ssot__IncidentRelatedItem__dlm/fields/ssot__rel_1702009528766_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009528766_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IncidentRelatedItem_RelatedReference_rel</label>
    <referenceTo>ssot__Product__dlm</referenceTo>
    <relationshipLabel>IncidentRelatedItem_RelatedReference_rel</relationshipLabel>
    <relationshipName>rel_1702009528766_end</relationshipName>
    <type>Lookup</type>
</CustomField>